# Robotics

robotic-coursework-f2023/: README.md
robotic-coursework-f2023/base_controller/: CMakeLists.txt  package.xml
robotic-coursework-f2023/base_controller/launch/: a3.launch
robotic-coursework-f2023/base_controller/src/: base_controller.cpp
robotic-coursework-f2023/cubic_polynomial_planner/: CMakeLists.txt  package.xml
robotic-coursework-f2023/cubic_polynomial_planner/include/cubic_polynomial_planner/: action.hpp
robotic-coursework-f2023/cubic_polynomial_planner/launch/: a2.launch  pose_action_server.launch
robotic-coursework-f2023/cubic_polynomial_planner/src/: action.cpp  action_server.cpp  cubic.cpp
robotic-coursework-f2023/dynamic_controller/: CMakeLists.txt  package.xml
robotic-coursework-f2023/dynamic_controller/include/dynamic_controller/: joint.hpp  task.hpp
robotic-coursework-f2023/dynamic_controller/launch/: joint_controller.launch  pose_controller.launch
robotic-coursework-f2023/dynamic_controller/src/: joint.cpp  joint_controller.cpp  task.cpp  task_controller.cpp
robotic-coursework-f2023/highlevel_controller/: CMakeLists.txt  package.xml
robotic-coursework-f2023/highlevel_controller/config/: a7-clean-1.yaml  a7-clean-2.yaml  a7.yaml
robotic-coursework-f2023/highlevel_controller/include/highlevel_controller/: client.hpp
robotic-coursework-f2023/highlevel_controller/launch/: a6.launch  a7-clean-1.launch  a7-clean-2.launch  a7.launch
robotic-coursework-f2023/highlevel_controller/src/: action_client.cpp  client.cpp
robotic-coursework-f2023/highlevel_msgs/: CMakeLists.txt  package.xml
robotic-coursework-f2023/highlevel_msgs/action/: PoseCommand.action
robotic-coursework-f2023/highlevel_msgs/srv/: MoveOri.srv
robotic-coursework-f2023/keyboard_controller/: CMakeLists.txt  package.xml
robotic-coursework-f2023/keyboard_controller/launch/: a1.launch
robotic-coursework-f2023/keyboard_controller/src/: keyboard_controller.cpp
robotic-coursework-f2023/kinematic_controller/: CMakeLists.txt  package.xml
robotic-coursework-f2023/kinematic_controller/include/kinematic_controller/: joint.hpp  task.hpp
robotic-coursework-f2023/kinematic_controller/launch/: joint_controller.launch  pose_controller.launch
robotic-coursework-f2023/kinematic_controller/src/: joint.cpp  joint_controller.cpp  task.cpp  task_controller.cpp
robotic-coursework-f2023/potential_field_planner/: CMakeLists.txt  package.xml
robotic-coursework-f2023/potential_field_planner/include/potential_field_planner/: PotentialFieldPlanner.hpp
robotic-coursework-f2023/potential_field_planner/src/: potential_field_planner.cpp  potential_field_planner_node.cpp
